<resources>
    <string name="app_name">Family Map</string>
    <string name="settings_app_name">Family Map: Settings</string>
    <string name="search_app_name">Family Map: Search</string>
    <string name="person_app_name">Family Map: Person Details</string>
    <string name="title_activity_maps">Map</string>
    <string name="prompt_server_host">Server Host: </string>
    <string name="enter_server_host">Server Host</string>
    <string name="prompt_server_port">Server Port: </string>
    <string name="enter_server_port">Server Port</string>
    <string name="prompt_user_name">User Name: </string>
    <string name="enter_user_name">User Name</string>
    <string name="prompt_password">Password: </string>
    <string name="enter_password">Password</string>
    <string name="prompt_first_name">First Name: </string>
    <string name="enter_first_name">First Name</string>
    <string name="prompt_last_name">Last Name: </string>
    <string name="enter_last_name">Last Name</string>
    <string name="prompt_email">Email: </string>
    <string name="enter_email">Email</string>
    <string name="choose_gender">Gender: </string>
    <string name="choose_male">Male</string>
    <string name="choose_female">Female</string>
    <string name="sign_in_button">SIGN IN</string>
    <string name="register_button">REGISTER</string>
    <string name="search_button">Search</string>
    <string name="settings_button">Settings</string>
    <string name="map_icon">Female icon</string>
    <string name="map_prompt">Click on a marker to see event details</string>
    <string name="ls_lines">Life Story Lines</string>
    <string name="show_ls_lines">SHOW LIFE STORY LINES</string>
    <string name="ft_lines">Family Tree Lines</string>
    <string name="show_ft_lines">SHOW FAMILY TREE LINES</string>
    <string name="spouse_lines">Spouse Lines</string>
    <string name="show_spouse_lines">SHOW SPOUSE LINES</string>
    <string name="father_side">Father\'s Side</string>
    <string name="show_father_side">FILTER BY FATHER\'S SIDE OF FAMILY</string>
    <string name="mother_side">Mother\'s Side</string>
    <string name="show_mother_side">FILTER BY MOTHER\'S SIDE OF FAMILY</string>
    <string name="male_events">Male Events</string>
    <string name="female_events">Female Events</string>
    <string name="show_gender">FILTER EVENTS BASED ON GENDER</string>
    <string name="logout">Logout</string>
    <string name="show_logout">RETURN TO LOGIN SCREEN</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="life_events">LIFE EVENTS</string>
    <string name="family">FAMILY</string>
    <string name="filler">FILLER</string>
</resources>