<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".2">
    </Space>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="4"
        android:columnCount="2"
        android:rowCount="8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_vertical|end"
            android:layout_rowWeight="1"
            android:text="@string/prompt_server_host">
        </TextView>

        <EditText
            android:id="@+id/serverHost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="6"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:hint="@string/enter_server_host"
            android:inputType="text">
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="center_vertical|end"
            android:layout_rowWeight="1"
            android:text="@string/prompt_server_port">
        </TextView>

        <EditText
            android:id="@+id/serverPort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="6"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:hint="@string/enter_server_port"
            android:inputType="number">
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="center_vertical|end"
            android:layout_rowWeight="1"
            android:text="@string/prompt_user_name">
        </TextView>

        <EditText
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="6"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:hint="@string/enter_user_name"
            android:inputType="text">
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_gravity="center_vertical|end"
            android:layout_rowWeight="1"
            android:text="@string/prompt_password">
        </TextView>

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="6"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:hint="@string/enter_password"
            android:inputType="textPassword">
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_gravity="center_vertical|end"
            android:layout_rowWeight="1"
            android:text="@string/prompt_first_name">
        </TextView>

        <EditText
            android:id="@+id/firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="6"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:hint="@string/enter_first_name"
            android:inputType="text">
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_gravity="center_vertical|end"
            android:layout_rowWeight="1"
            android:text="@string/prompt_last_name">
        </TextView>

        <EditText
            android:id="@+id/lastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="6"
            android:layout_row="5"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:hint="@string/enter_last_name"
            android:inputType="text">
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_row="6"
            android:layout_column="0"
            android:layout_gravity="center_vertical|end"
            android:layout_rowWeight="1"
            android:text="@string/prompt_email">
        </TextView>

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="6"
            android:layout_row="6"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress">
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_row="7"
            android:layout_column="0"
            android:layout_gravity="center_vertical|end"
            android:layout_rowWeight="1"
            android:text="@string/choose_gender">
        </TextView>

        <RadioGroup
            android:layout_row="7"
            android:layout_column="1"
            android:layout_columnWeight="6"
            android:layout_rowWeight="1"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical">

            <RadioButton
                android:id="@+id/maleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_male">
            </RadioButton>

            <RadioButton
                android:id="@+id/femaleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_female">
            </RadioButton>

        </RadioGroup>

    </GridLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2">

        <Button
            android:id="@+id/signInButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/sign_in_button"
            />
        <Button
            android:id="@+id/registerButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/register_button"
            />

    </LinearLayout>

</LinearLayout>